fix vertical align for all listing

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -1,5 +1,6 @@
 .one_listing {
   display: inline-block;
+  vertical-align: top;
   width: 300px;
   height: 480px;
   border:2px solid black;
